added divs with DOM manipulation

--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,17 @@
     background-color: skyblue;
   }
 
-  /* .grid {
-    width: 40px;
-    height: 40px;
+  #container {
+    margin: 100px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .grid {
+    width: 35px;
+    height: 35px;
     border: 1px solid black;
-  } */
+  }
   
   @media (max-width: 75em) {
     html {
