--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
+    box-sizing: border-box;
   }
   
   html{
@@ -25,6 +20,7 @@
   }
 
   .grid {
+    flex: 1 0 calc(100% / 16);
     width: 35px;
     height: 35px;
     border: 1px solid black;
