--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,33 @@
     background-color: skyblue;
   }
 
-  #container {
-    margin: 100px;
+  h1 {
+    font-size: 10ch;
+    text-align: center;
+  }
+
+  p {
+  font-size: 5ch;
+  text-align: center;
+  }
+
+  #reset {
     display: flex;
+    margin: 0 auto;
+  }
+
+  #container {
+    height: 550px;
+    width: 550px;
+    display: flex;
+    margin: 0 auto;
     flex-wrap: wrap;
     border: 1px solid black;
   }
 
   .grid {
     flex: 1 0 calc(100% / 16);
-    width: 35px;
-    height: 35px;
+    background-color: white;
   }
   
   @media (max-width: 75em) {
