--- a/styles.css
+++ b/styles.css
@@ -10,30 +10,29 @@
   }
   
   body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: skyblue;
   }
 
   h1 {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 10ch;
     text-align: center;
   }
 
   p {
+  font-family: Arial, Helvetica, sans-serif;  
   font-size: 5ch;
   text-align: center;
   }
 
-  button {
-    display: flex;
-    margin: 0 auto;
-  }
-
   #container {
-    height: 550px;
-    width: 550px;
-    display: flex;
-    margin: 0 auto;
-    flex-wrap: wrap;
+    width: 500px;
+    height: 500px;
+    display: grid;
     border: 1px solid black;
   }
 
