--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: skyblue;
+    background: linear-gradient(to right, #00aaff, #00ff6c); 
   }
 
   h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;  
     font-size: 10ch;
     text-align: center;
   }
@@ -30,8 +30,8 @@
   }
 
   #container {
-    width: 700px;
-    height: 700px;
+    width: 500px;
+    height: 500px;
     display: grid;
     border: 1px solid black;
   }
