--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   }
   
   body {
+    font-family: Arial, Helvetica, sans-serif;  
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,13 +19,11 @@
   }
 
   h1 {
-    font-family: Arial, Helvetica, sans-serif;  
     font-size: 10ch;
     text-align: center;
   }
 
   p {
-  font-family: Arial, Helvetica, sans-serif;  
   font-size: 5ch;
   text-align: center;
   }
@@ -36,9 +35,19 @@
     border: 1px solid black;
   }
 
+  .buttons {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
   .grid {
     flex: 1 0 calc(100% / 16);
     background-color: white;
+  }
+
+  #talkbox {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   
   @media (max-width: 75em) {
